syntax = "proto3";

package proto_feed;

option go_package = "./protos/gen/feed/;gen";

message GetPinsRequest {
    int64 page = 1;
    int64 page_size = 2;
}

message Pin {
    uint64 flow_id = 1;
	string header = 2;
	uint64 author_id = 3;
	string author_username = 4;
	string description = 5;
	string media_url = 6;
    bool is_private = 7;
	string created_at = 8;
    string updated_at = 9;
	bool is_liked = 10;
	int64 like_count = 11;
	int64 width = 12;
    int64 height = 13;
}

message GetPinsResponse {
    repeated Pin pins = 1;
}

service Feed {
    rpc GetPins(GetPinsRequest) returns (GetPinsResponse) {}
}
